# enhanced-unfurls

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml  tasks.py
pelican/plugins/enhanced_unfurls/: __init__.py  metadata.py  oembed.py  tagging.py
test/: test_metadata.py  test_oembed.py  test_tagging.py
test/data/posts/: test-article.rst
