[tool.poetry]
name = "pelican-enhanced-unfurls"
version = "0.0.0"
description = "Generate metadata for improved link unfurls in Facebook/Slack/Twitter/etc."
authors = ["Jeremy Brown <mischif@users.noreply.github.com>"]
license = "NPOSL-3.0"
readme = "README.md"
keywords = ["pelican", "open graph", "oembed"]
repository = "https://github.com/mischif/enhanced-unfurls"
documentation = "https://docs.getpelican.com"
packages = [
    { include = "pelican" },
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Framework :: Pelican",
    "Framework :: Pelican :: Plugins",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.urls]
"Issue Tracker" = "https://github.com/mischif/enhanced-unfurls/issues"

[tool.poetry.dependencies]
python = "^3.6.2"
pelican = "^4.5"
markdown = {version = ">=3.2", optional = true}

[tool.poetry.dev-dependencies]
black = {version = "^21.5b0", allow-prereleases = true}
flake8 = "^3.9"
flake8-black = "^0.2"
invoke = "^1.3"
isort = "^5.4"
livereload = "^2.6"
markdown = "^3.2"
pytest = "^6.0"
pytest-cov = "^2.8"
pytest-pythonpath = "^0.7"
pytest-sugar = "^0.9"
Werkzeug = "^1.0"

[tool.poetry.extras]
markdown = ["markdown"]

[tool.autopub]
project-name = "Enhanced Unfurls"
git-username = "botpub"
git-email = "botpub@autopub.rocks"
append-github-contributor = true

[tool.isort]
# Maintain compatibility with Black
profile = "black"
multi_line_output = 3

# Sort imports within their section independent of the import type
force_sort_within_sections = true

# Designate "pelican" as separate import section
known_pelican = "pelican"
sections = "FUTURE,STDLIB,THIRDPARTY,PELICAN,FIRSTPARTY,LOCALFOLDER"

[tool.coverage.run]
omit = [
	"pelican/plugins/enhanced_unfurls/__init__.py"
	]
[tool.coverage.report]
show_missing = true
skip_covered = true
skip_empty = true

[tool.pytest.ini_options]
addopts = "-v -s --lf --cov=pelican.plugins.enhanced_unfurls --cov-report term"
testpaths = ["test"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
